--- a/webproj/app/templates/footer.html
+++ b/webproj/app/templates/footer.html
@@ -15,6 +15,7 @@
                     <li><a href="{% url 'topArtists' %}">Top Artists</a></li>
                     <li><a href="{% url 'topTracks' %}">Top Tracks</a></li>
                     <li><a href="{% url 'topTags' %}">Top Tags</a></li>
+                    <li><a href="{% url 'topCountries' %}">Top Countries</a></li>
                 </ul>
             </div>
             <div class="col-sm-3 info" style="text-align: justify; color: #afb0b1;">
