--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -39,6 +39,7 @@
                     <li><a href="{% url 'topArtists' %}">Top Artists</a></li>
                     <li><a href="{% url 'topTags' %}">Top Tags</a></li>
                     <li><a href="{% url 'topTracks' %}">Top Tracks</a></li>
+                    <li><a href="{% url 'topCountries' %}">Top Countries</a></li>
                 </ul>
 
                 <div class="col-sm-3 col-md-3 navbar-right">
